BLAZOR: overflow fix for MdiWindow.

--- a/src/Web/EficazFramework.Blazor/Styles/Components/Mdi.scss
+++ b/src/Web/EficazFramework.Blazor/Styles/Components/Mdi.scss
@@ -7,11 +7,17 @@
     box-shadow: var(--mud-elevation-3);
     background-color: var(--mud-palette-surface);
     border-radius: 10px;
+    overflow: hidden;
 }
 
 .ef-mdi-window-active {
     box-shadow: var(--mud-elevation-10);
     border-color: var(--mud-palette-primary)
+}
+
+.ef-mdi-window-host {
+    cursor: initial;
+    overflow: auto;
 }
 
 .ef-mdi-start-menu {
